$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.6-10 (openen Jan 20, 2009)

	* vegdist doc: Morisita and Horn-Morisita were given as
	similarities in the help.

	* ordirgl: fixed wrong warnings in ordirgl(..., type="t"). 

	* kendall.post, kendall.global: knows now all P value adjustment
	methods of 'p.adjust()' plus "sidak".
	
Version 1.16-9 (closed Jan 20, 2009)
	
	* kendall.post: added one line that was accidentally lost in
	editing. 

	* Checked with R version 2.9.0 Under development (unstable) 
	(2009-01-13 r47593) having experimental strict Rd parser, and
	corrected the reported problems in Rd files so that vegan is R
	2.9.0-ready. 

	* adonis: uses now canonical (hits+1)/(tries+1) for P-values
	instead of hits/tries. Default number of permutations increased
	from 5 to 999. Added terms component so that things like update()
	and drop.scope() magically started to work. Renamed design.matrix
	into model.matrix (and documented the item). 

	* permatswap: new algorithm "swsh" is added to keep row/column
	incidences (but not sums) constant. The name refers to the two
	steps: (1) binary *sw*aps are made then (2) individuals in
	non-zero cells are *sh*uffled.

	* permat methods: calculations of the Chi-squared statistic is
	added to summary, and the type argument can be used in the plot
	"bray" or "chisq" values.

	* nestednodf: gained argument 'order = TRUE' allowing tests for
	other orderings than using marginal frequencies (default)
	following suggestion by Almeida-Neto et al. (2008).

	* summary.cca:  cumulative "accounted for" statistics failed in
	unconstrained models.
	
Version 1.16-8 (closed Jan 7, 2009)

	* Fixed unescaped $-signs in documentation files after Ripley told
	to do so ("[Rd] Misuse of $<matn expressions>$ in Rd files",
	https://stat.ethz.ch/pipermail/r-devel/2008-December/051634.html) 

	* kendall.global & kendall.post: new functions to analyse the
	Kendall's coefficient of concordance  --- use in ecology: to