@@ -37,13 +37,13 @@
         }
     }
     maxdis <- max(dis)
-    if (sum(tmp <- no.shared(comm))/length(dis) > noshare && noshare > 0) {
+    if (noshare > 0 && sum(tmp <- no.shared(comm))/length(dis) > noshare) {
         if (trace) 
             cat("Using step-across dissimilarities:\n")
         dis <- stepacross(dis, trace = trace, ...)
+        if (length(unique(distconnected(tmp, trace = trace > 1))) > 1) 
+            warning("Data are disconnected, results may be meaningless")
     }
-    if (length(unique(distconnected(tmp, trace = trace > 1))) > 1) 
-        warning("Data are disconnected, results may be meaningless")
     attr(dis, "maxdis") <- maxdis
     attr(dis, "commname") <- commname
     attr(dis, "function") <- distname
