@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.6-10 (openen Jan 20, 2009)
 
+	* metaMDS: really do not evaluate no.shared() if set
+	noshare=0. Triggered by a problem report with missing data. 
+
 	* vegdist doc: Morisita and Horn-Morisita were given as
 	similarities in the help.
 
